--- a/angular/src/app/main/TasksCheckList/tasks/tasks.component.html
+++ b/angular/src/app/main/TasksCheckList/tasks/tasks.component.html
@@ -14,11 +14,11 @@
                             </h3>
                         </div>
                         <div class="kt-portlet__head-toolbar">
-                            <a (click)="RedirectToCreateTask()" class="btn btn-brand btn-elevate"
+                            <button (click)="RedirectToCreateTask()" class="btn btn-brand btn-elevate"
                                 value="Create New Task">
                                 <i class="la la-plus"></i>
                                 Create new task
-                            </a>
+                            </button>
                         </div>
                     </div>
 
