--- a/angular/src/app/main/categories/creat-or-edit-category/creat-or-edit-category.component.html
+++ b/angular/src/app/main/categories/creat-or-edit-category/creat-or-edit-category.component.html
@@ -6,7 +6,7 @@
                 <div class="kt-portlet__head">
                     <div class="kt-portlet__head-label">
                         <h3 class="kt-portlet__head-title">
-                            Create Category
+                            {{formTitle}}
                         </h3>
                     </div>
                     <div class="kt-portlet__head-toolbar">
@@ -43,7 +43,7 @@
                     </div>
                     <div class="form-group">
                         <button class="btn btn-brand"  type="submit">
-                            Create
+                            {{saveBtnText}}
                         </button>
                     </div>
                 </form>
