--- a/angular/src/app/main/categories/categorie-drop-down/categorie-drop-down.component.html
+++ b/angular/src/app/main/categories/categorie-drop-down/categorie-drop-down.component.html
@@ -1,8 +1,9 @@
 <div class="form-group">
     <label>Category</label>
-    <select id="categories" class="form-control input-medium select2-search select2-search--inline">
-        <option *ngFor="let item of categories; let i = index" [value]="categories[i].id">
-            {{categories[i].name}}
+    <select id="categories" (change)="categoryValuee()" name="categories" [(ngModel)]="categoryId" class="form-control input-medium select2-search select2-search--inline"  >
+        <option  *ngFor="let item of category;" 
+        [value]="item.value">
+            {{item.name}}
         </option>
-    </select>
+    </select>   
 </div>
