--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body,html{
+    overflow: auto !important;
+}
 .margin-left-5 {
     margin-left: 5px !important;
 }
