--- a/angular/src/app/main/TasksCheckList/user-list-component/user-list-component.component.html
+++ b/angular/src/app/main/TasksCheckList/user-list-component/user-list-component.component.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<!-- <div class="form-group">
     <label>Assigni Name</label>
     <select id="categories" name="users" (change)="userOnChange()" [(ngModel)]="selectedUserId" class="form-control input-medium select2-search select2-search--inline"  >
         <option  *ngFor="let item of users;" 
@@ -6,4 +6,16 @@
             {{item.name}}
         </option>
     </select>   
+</div> -->
+
+
+
+<div class="form-group">
+    <label>Assignee</label>
+    <div>
+        <p-autoComplete [(ngModel)]="selectedUserId" [suggestions]="users" (completeMethod)="onSearchUsers($event)" field="name"
+            placeholder="Search..." [minLength]="1" name="SingleSelectInput" id="SingleSelectInput" [multiple]="false"
+            inputStyleClass="form-control" styleClass="width-percent-100" [forceSelection]="true" required>
+        </p-autoComplete>
+    </div>
 </div>
