--- a/angular/src/app/main/TasksCheckList/task-details/task-details.component.html
+++ b/angular/src/app/main/TasksCheckList/task-details/task-details.component.html
@@ -16,8 +16,15 @@
                     </div>
                 </div>
                 <div class="kt-portlet__body">
-                   
-                
+                 
+                 <div class="row">
+                     <div class="col-md-6">
+                     <h3>Some task name</h3>
+                     </div>
+                     <div class="col-md-6">
+                     task details
+                     </div>
+                 </div>
                 </div>
 
             </div>
