--- a/angular/src/app/main/TasksCheckList/task-details/task-details.component.html
+++ b/angular/src/app/main/TasksCheckList/task-details/task-details.component.html
@@ -19,10 +19,10 @@
                  
                  <div class="row">
                      <div class="col-md-6">
-                     <h3>Some task name</h3>
+                     <h5>Some task name col6</h5>
                      </div>
                      <div class="col-md-6">
-                     task details
+                     task details col6
                      </div>
                  </div>
                 </div>
